config/kubernetes/production/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: family-mediators-api-deployment-production
  namespace: family-mediators-api-production
spec:
  replicas: 2
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
  selector:
    matchLabels:
      app: family-mediators-api-web-production
  template:
    metadata:
      labels:
        app: family-mediators-api-web-production
        tier: frontend
    spec:
      containers:
      - name: webapp
        image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/family-justice/family-mediators-api:production.latest
        imagePullPolicy: Always
        ports:
          - containerPort: 9292
        command: ["./config/docker/entrypoint-webapp.sh"]
        resources:
          requests:
            cpu: 125m
            memory: 1Gi
          limits:
            cpu: 250m
            memory: 2Gi
        readinessProbe:
          httpGet:
            path: /ping
            port: 9292
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /ping
            port: 9292
          initialDelaySeconds: 15
          periodSeconds: 10
        # non-secret env vars defined in `config_map.yaml`
      - name: metrics
        image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/family-justice/family-mediators-api:production.latest
        imagePullPolicy: Always
        ports:
          - containerPort: 9394
        command: ['sh', '-c', 'bundle exec prometheus_exporter --bind 0.0.0.0']
        livenessProbe:
          httpGet:
            path: /metrics
            port: 9394
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /metrics
            port: 9394
          initialDelaySeconds: 15
          periodSeconds: 10
