config/kubernetes/production/service.yml
apiVersion: v1
kind: Service
metadata:
  name: family-mediators-api-service-production
  namespace: family-mediators-api-production
  labels:
    app: family-mediators-api-web-production
spec:
  ports:
  - port: 80
    name: http
    targetPort:
  - port: 9394
    name: metrics
    targetPort: 9394
  selector:
    app: family-mediators-api-web-production
